// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`service layout multiple services — per-service directories (default) 1`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import type {
  ComposableHttpRouter,
  HttpInterpreterOptions,
  MatchedRequestContext,
} from "@typespex/http-server";
import { bindRoute, createHttpRouter } from "@typespex/http-server";
import type { PublicApiServer } from "./server.js";
import { PublicApiOperations } from "./server-operations.js";

export function createPublicApiServerRouter<Ctx extends MatchedRequestContext>(
  implementation: PublicApiServer<Ctx>,
  options?: HttpInterpreterOptions<Ctx>,
): ComposableHttpRouter {
  return createHttpRouter(
    [bindRoute(PublicApiOperations.listItems, implementation.listItems)],
    options,
  );
}
"
`;

exports[`service layout multiple services — per-service directories (default) 2`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import type {
  ComposableHttpRouter,
  HttpInterpreterOptions,
  MatchedRequestContext,
} from "@typespex/http-server";
import { bindRoute, createHttpRouter } from "@typespex/http-server";
import type { AdminApiServer } from "./server.js";
import { AdminApiOperations } from "./server-operations.js";

export function createAdminApiServerRouter<Ctx extends MatchedRequestContext>(
  implementation: AdminApiServer<Ctx>,
  options?: HttpInterpreterOptions<Ctx>,
): ComposableHttpRouter {
  return createHttpRouter(
    [bindRoute(AdminApiOperations.listUsers, implementation.listUsers)],
    options,
  );
}
"
`;

exports[`service layout multiple services — prefixed files 1`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/http-server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/http-server";
import * as ServerHints from "./PublicApi.server-hints.js";
import type { Item } from "./PublicApi.models.js";

const PublicApiOutput = {
  listItems: ResponseEncoders.json<Item[]>(200),
};

export const PublicApiOperations = {
  listItems: {
    endpoint: {
      service: { name: "PublicApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "listItems",
        operationId: "PublicApi.listItems",
        method: "GET" as const,
        path: "/items",
        routePattern: { segments: [[{ kind: "literal", value: "items" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (result: Item[]) => PublicApiOutput.listItems.encode(result),
  } satisfies ServerOperation<Record<string, never>, Item[]>,
} as const;
"
`;

exports[`service layout multiple services — prefixed files 2`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import type {
  ComposableHttpRouter,
  HttpInterpreterOptions,
  MatchedRequestContext,
} from "@typespex/http-server";
import { bindRoute, createHttpRouter } from "@typespex/http-server";
import type { PublicApiServer } from "./PublicApi.server.js";
import { PublicApiOperations } from "./PublicApi.server-operations.js";

export function createPublicApiServerRouter<Ctx extends MatchedRequestContext>(
  implementation: PublicApiServer<Ctx>,
  options?: HttpInterpreterOptions<Ctx>,
): ComposableHttpRouter {
  return createHttpRouter(
    [bindRoute(PublicApiOperations.listItems, implementation.listItems)],
    options,
  );
}
"
`;

exports[`service layout custom folder and file name patterns 1`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/http-server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/http-server";
import * as ServerHints from "./server-hints.gen.js";
import type { Invoice } from "./models.gen.js";

const BillingAPIOutput = {
  listInvoices: ResponseEncoders.json<Invoice[]>(200),
};

export const BillingAPIOperations = {
  listInvoices: {
    endpoint: {
      service: { name: "BillingAPI", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "listInvoices",
        operationId: "BillingAPI.listInvoices",
        method: "GET" as const,
        path: "/invoices",
        routePattern: {
          segments: [[{ kind: "literal", value: "invoices" }]],
          trailingSlash: false,
        },
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (result: Invoice[]) => BillingAPIOutput.listInvoices.encode(result),
  } satisfies ServerOperation<Record<string, never>, Invoice[]>,
} as const;
"
`;

exports[`service layout custom folder and file name patterns 2`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import type {
  ComposableHttpRouter,
  HttpInterpreterOptions,
  MatchedRequestContext,
} from "@typespex/http-server";
import { bindRoute, createHttpRouter } from "@typespex/http-server";
import type { BillingAPIServer } from "./server.gen.js";
import { BillingAPIOperations } from "./server-operations.gen.js";

export function createBillingAPIServerRouter<Ctx extends MatchedRequestContext>(
  implementation: BillingAPIServer<Ctx>,
  options?: HttpInterpreterOptions<Ctx>,
): ComposableHttpRouter {
  return createHttpRouter(
    [bindRoute(BillingAPIOperations.listInvoices, implementation.listInvoices)],
    options,
  );
}
"
`;
